<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".LandingActivity">

    <Button
        android:id="@+id/landing_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_1_thread_sederhana"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/landing_2"
        app:layout_constraintVertical_chainStyle="packed"
        app:icon="@drawable/ic_baseline_autorenew_24"
        style="@style/Widget.MaterialComponents.Button.Icon"/>

    <Button
        android:id="@+id/landing_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/_2_http_connection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/landing_1"
        app:layout_constraintBottom_toTopOf="@+id/landing_3"
        app:layout_constraintVertical_chainStyle="packed"
        app:icon="@drawable/ic_baseline_web_24"
        style="@style/Widget.MaterialComponents.Button.Icon"/>

    <Button
        android:id="@+id/landing_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/_3_progress_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/landing_2"
        app:layout_constraintBottom_toTopOf="@+id/landing_4"
        app:layout_constraintVertical_chainStyle="packed"
        app:icon="@drawable/ic_baseline_downloading_24"
        style="@style/Widget.MaterialComponents.Button.Icon"/>

    <Button
        android:id="@+id/landing_4"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/_4_thread_login"
        app:icon="@drawable/ic_baseline_login_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/landing_3" />


</androidx.constraintlayout.widget.ConstraintLayout>